# handbrake-version-notifier

./: .gitignore  SECURITY.MD  handbrake_version_notifier.py  mise.toml  pyproject.toml  requirements.txt
docs/superpowers/plans/: 2026-04-21-uv-migration.md
docs/superpowers/specs/: 2026-04-21-uv-migration-design.md
