[tool.poetry]
name = "handbrake-version-notifier"
version = "0.0.1"
description = "A thing that checks for handbrake versions"
authors = ["James Hodgkinson <james@terminaloutcomes.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.33.1"
semver = "^3.0.4"
loguru = "^0.7.3"
click = "^8.3.2"

[tool.poetry.dev-dependencies]
types-requests = "^2.33.0"
pylint = "^4.0.5"
pytest = "^9.0.3"
black = "^26.3.1"
mypy = "^1.20"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
