[project]
name = "handbrake-version-notifier"
version = "0.0.1"
description = "A thing that checks for handbrake versions"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.3",
    "loguru>=0.7.3",
    "requests>=2.33.1",
    "semver>=3.0.4",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "pylint>=4.0.5",
    "pytest>=9.0.3",
    "ty>=0.0.32",
    "types-requests>=2.33.0.20260408",
]

[tool.uv]
package = false
