[project]
name = "handbrake-version-notifier"
version = "0.0.1"
description = "A thing that checks for handbrake versions"
requires-python = ">=3.12"
dependencies = [
    "click>=8.4.1",
    "loguru>=0.7.3",
    "requests>=2.34.2",
    "semver>=3.0.4",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "pylint>=4.0.6",
    "pytest>=9.1.1",
    "ty>=0.0.54",
    "types-requests>=2.33.0.20260518",
]

[tool.uv]
package = false
